# webdriver-wrappers

./: .gitignore  LICENSE  README.md  pyproject.toml  runner.py
src/webdriver_wrappers/: __init__.py  chrome.py  firefox.py
src/webdriver_wrappers/_bin/chrome/: .version
src/webdriver_wrappers/utils/: downloader.py  exceptions.py  uncompression_tools.py  versions.py
src/webdrivers/: chrome.py  firefox.py  utils.py
src/webdrivers/_bin/firefox/: .version
