[tool.poetry]
name = "webdriver-wrappers"
version = "0.3.0"
description = "Custom Webdriver Wrappers"
authors = ["Eldar Gazizov <kursus1010@gmail.com>"]
readme = "README.md"
packages = [{include = "webdriver_wrappers", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
